--- a/client/src/routes/WeeklyDsr/_weeklyDsr.styles.scss
+++ b/client/src/routes/WeeklyDsr/_weeklyDsr.styles.scss
@@ -88,6 +88,10 @@
         margin: auto 0;
         height: 100%;
 
+        @media screen and (max-width: 700px) {
+            padding: 25% 0;
+        }
+
         .heading-s {
             color: $color-success;
             text-align: center;
@@ -95,6 +99,14 @@
 
             i {
                 font-size: 3.5rem;
+            }
+
+            @media screen and (max-width: 700px) {
+                font-size: 1.8rem;
+
+                i {
+                    font-size: 2.5rem;
+                }
             }
         }
     }
